--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -83,7 +83,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --data-raw '{
     "name":"安全帽检测",
     "start":1,
-    "source":10,
+    "source":11,
     "schedulerType":"Daemon",
     "models":{
         "id":3,
@@ -116,8 +116,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "安全帽",
-    "url":"rtsp://admin:qdek2018@192.168.0.51:554/h265/ch1/main/av_stream"
+    "name": "大门口",
+    "url":"rtsp://admin:asdf2024@192.168.1.64:554/h264/ch1/main/av_stream"
 }'
 
 # 清除所有告警记录并删除文件
