--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -216,3 +216,53 @@
     "total_page":1
 }
 ```
+
+## gh-rk-1010
+
++ 相机
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": 10,
+            "name": "大门口",
+            "updatedtime": "2024-1-5 11:25:38",
+            "url": "rtsp://admin:asdf2024@192.168.1.64:554/h264/ch1/main/av_stream",
+            "url_suffix": "/live/1C8wF"
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 任务
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": "0RbC0",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
+            },
+            "name": "安全帽",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 10,
+            "start": 1
+        }
+    ],
+    "total_count": 1,
+    "total_page": 1
+}
+```
