--- a/Personal/资金.md
+++ b/Personal/资金.md
@@ -109,3 +109,11 @@
   + 存钱: 6000
   + 房租: 700
   + 剩余: 1752.97 + 318 - 92.96 = 1978.01
+
+## 2024.03.18
+
++ 总存款: 3.6w
++ 当前余额
+  + 招商: 1660.9
+  + 农业: 298.42
+  + 信用卡: -92.95
