--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -83,7 +83,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --data-raw '{
     "name":"安全帽检测",
     "start":1,
-    "source":11,
+    "source":15,
     "schedulerType":"Daemon",
     "models":{
         "id":3,
@@ -167,11 +167,28 @@ curl -X GET http://127.0.0.1:8000/api/device/info
 # 任务列表
 curl -X POST --data-urlencode 'cmd=1' http://127.0.0.1:17008/api
 
+# 检查设备信息
+curl -X POST --data-urlencode 'cmd=201' http://127.0.0.1:17008/api
+
 # 查询任务状态
 curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=79Tli' http://127.0.0.1:17008/api
 
 # 删除任务
 curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0.1:17008/api
+```
+
+## vam 
+
+```bash
+# 获取许可证
+curl http://192.169.4.56:27008/api?cmd=1\&day=999\&node=1\&mc=
+
+# GK3HE6VY-RB3XW2U2-EK2DE6VU-QK3HE6VU-8A3FS3WS-N63XE6VU-QK2CRYDG-LKVFE7VU-QK3HE6VU-QK3GQWDD-MATHWK4S
+
+```
+
+```json
+{"licence":"GK3HE6VY-RB3XW2U2-EK2DE6VU-QK3HE6VU-8A3FS3WS-N63XE6VU-QK2CRYDG-LKVFE7VU-QK3HE6VU-QK3GQWDD-MATHWK4S"}
 ```
 
 ## ffmpeg record video
