--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -68,6 +68,19 @@ function FRPC()
 FRPC
 ```
 
+## 云平台管理
+
++ 南京傲途
+  + https://wisdom.aotusoft.net/wisdom/aibox/upload
+
++ 常州建安
+  + https://test.ticdata.cn/zhgd-gateway/zhgd-cus/openApi/token&https://test.ticdata.cn/zhgd-gateway/smart-mon/openApi/addAiData
+    + {token_address}&{push_address}
+  + key
+    + qian001
+  + secret 
+    + 12345678
+
 ## mnc script
 
 ```bash
@@ -170,11 +183,17 @@ curl -X POST --data-urlencode 'cmd=1' http://127.0.0.1:17008/api
 # 检查设备信息
 curl -X POST --data-urlencode 'cmd=201' http://127.0.0.1:17008/api
 
+# 获取机器码
+curl -X POST --data-urlencode 'cmd=203' http://127.0.0.1:17008/api
+
 # 查询任务状态
 curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=79Tli' http://127.0.0.1:17008/api
 
 # 删除任务
 curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0.1:17008/api
+
+# 更新许可证
+curl -X POST --data-urlencode 'cmd=202' --data-urlencode 'licence=CKBEESUG-KAK6EWVJ-CKBFESUC-JKBEESUD-2BDEWZZA-N9KQESUC-JKABRSSD-JKMGESUC-JKBEESUC-JKBFE2UD-KFAGSF9C' http://127.0.0.1:17008/api
 ```
 
 ## vam 
@@ -188,7 +207,7 @@ curl http://192.169.4.56:27008/api?cmd=1\&day=999\&node=1\&mc=
 ```
 
 ```json
-{"licence":"GK3HE6VY-RB3XW2U2-EK2DE6VU-QK3HE6VU-8A3FS3WS-N63XE6VU-QK2CRYDG-LKVFE7VU-QK3HE6VU-QK3GQWDD-MATHWK4S"}
+{"licence":"CKBEESUG-KAK6EWVJ-CKBFESUC-JKBEESUD-2BDEWZZA-N9KQESUC-JKABRSSD-JKMGESUC-JKBEESUC-JKBFE2UD-KFAGSF9C"}
 ```
 
 ## ffmpeg record video
