--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -110,7 +110,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 curl -X POST --data "{\"id\":\"Qk99V\"}" http://127.0.0.1:8000/api/setting/task/stop
 
 # 删除任务
-curl -X POST --data "{\"ids\":[\"qfNY7\"]}" http://127.0.0.1:8000/api/setting/task/delete
+curl -X POST --data "{\"ids\":[\"U7tCN\"]}" http://127.0.0.1:8000/api/setting/task/delete
 
 # 启动任务
 curl -X POST --data "{\"id\":\"Qk99V\"}" http://127.0.0.1:8000/api/setting/task/start
