rk增加数据库脚本

--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -83,8 +83,34 @@ FRPC
 
 ## mnc script
 
++ 模型数据
+```
+1|烟火检测|loya|loya|/data/static/models/FIRE/detector.json|{'models':[{'model':'FIRE/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}|2023-7-26 2:16:54
+2|区域入侵检测|loya|loya|/data/static/models/AREA/detector.json|{'models':[{'model':'AREA/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}|2023-7-26 14:18:33
+3|安全帽检测|loya|loya|/data/static/models/HELMET/detector.json|{'models':[{'model':'HELMET/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}|2023-7-26 14:20:9
+4|反光衣检测|loya|loya|/data/static/models/REFLECT/detector.json|{'models':[{'model':'REFLECT/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}|2023-7-26 14:21:32
+```
+
+```sql
+select * from algorithm;
+
+insert into algorithm (id, name, product, vendor, detector_path, model_conf, time) values (1,'烟火检测','loya','loya','/data/static/models/FIRE/detector.json',"{'models':[{'model':'FIRE/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}",'2023-7-26 2:16:54');
+
+insert into algorithm (id, name, product, vendor, detector_path, model_conf, time) values (2,'区域入侵检测','loya','loya','/data/static/models/AREA/detector.json',"{'models':[{'model':'AREA/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}",'2023-7-26 14:18:33');
+
+insert into algorithm (id, name, product, vendor, detector_path, model_conf, time) values (3,'安全帽检测','loya','loya','/data/static/models/HELMET/detector.json',"{'models':[{'model':'HELMET/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}",'2023-7-26 14:20:9');
+
+insert into algorithm (id, name, product, vendor, detector_path, model_conf, time) values (4,'反光衣检测','loya','loya','/data/static/models/REFLECT/detector.json',"{'models':[{'model':'REFLECT/DETECT.conf','threshold':0.3}],'tracker':1,'type':1}",'2023-7-26 14:21:32');
+```
+
 ```bash
 #! /bin/bash 
+
+# 查看mnc日志
+tail -f /data/static/log/mnc.log
+
+# 查看vca日志
+tail -f /tmp/videoprocess/log/s1.log
 
 # 创建任务
 curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
@@ -94,9 +120,9 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name":"安全帽检测",
+    "name":"安全帽2",
     "start":1,
-    "source":15,
+    "source":2,
     "schedulerType":"Daemon",
     "models":{
         "id":3,
@@ -129,8 +155,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "大门口",
-    "url":"rtsp://admin:asdf2024@192.168.1.64:554/h264/ch1/main/av_stream"
+    "name": "施工主干道",
+    "url":"rtsp://admin:qwer1234@192.168.10.246:554/h264/ch1/main/av_stream"
 }'
 
 # 清除所有告警记录并删除文件
@@ -168,7 +194,23 @@ curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatfor
     "appKeySecret": "1111"
 }'
 
+# 查看序列号
 curl -X GET http://127.0.0.1:8000/api/device/info
+
+# 音柱平台列表
+curl -X GET http://127.0.0.1:8000/api/device/listSoundPlatform
+
+# 获取音频文件列表
+curl -X GET http://127.0.0.1:8000/api/setting/task/listSongs
+
+```
+
+## 妙音平台
+
+```bash
+# 获取列表
+curl -X POST http://192.168.0.101:8888 --header 'Content-Type: application/json' --data-raw '{"sn": "ls20://0201EE5E4D31","type": "req","name": "songs_queue_list"}'
+
 
 ```
 
@@ -187,7 +229,7 @@ curl -X POST --data-urlencode 'cmd=201' http://127.0.0.1:17008/api
 curl -X POST --data-urlencode 'cmd=203' http://127.0.0.1:17008/api
 
 # 查询任务状态
-curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=79Tli' http://127.0.0.1:17008/api
+curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=j8c2R' http://127.0.0.1:17008/api
 
 # 删除任务
 curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0.1:17008/api
