--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -10,48 +10,72 @@
 + 任务列表
 ```json
 {
-    "code":0,
-    "curr_page":1,
-    "list":[
+    "code": 0,
+    "curr_page": 1,
+    "list": [
         {
-            "id":"67pqx",
-            "models":{
-                "duration":"",
-                "end":"",
-                "id":3,
-                "name":"安全帽检测",
-                "start":""
+            "id": "YQJl7",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
             },
-            "name":"安全帽检测",
-            "running":0,
-            "schedulerType":"Daemon",
-            "song_address":"",
-            "sound_platform":9999,
-            "source":5,
-            "start":1
+            "name": "安全帽",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 11,
+            "start": 1
+        },
+        {
+            "id": "FulFE",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
+            },
+            "name": "安全帽2",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 12,
+            "start": 1
         }
     ],
-    "total_count":1,
-    "total_page":1
+    "total_count": 2,
+    "total_page": 1
 }
 ```
 
 + 相机列表
 ```json
 {
-    "code":0,
-    "curr_page":1,
-    "list":[
+    "code": 0,
+    "curr_page": 1,
+    "list": [
         {
-            "id":5,
-            "name":"门卫室",
-            "updatedtime":"2024-1-3 11:17:19",
-            "url":"rtsp://admin:qwer1234@192.168.10.242:554/h264/ch1/main/av_stream",
-            "url_suffix":"/live/2Ja0x"
+            "id": 11,
+            "name": "门卫室",
+            "updatedtime": "2024-3-13 15:57:37",
+            "url": "rtsp://admin:qwer1234@192.168.10.242:554/h264/ch1/main/av_stream",
+            "url_suffix": "/live/89OVG"
+        },
+        {
+            "id": 12,
+            "name": "施工主干道",
+            "updatedtime": "2024-3-13 15:54:49",
+            "url": "rtsp://admin:qwer1234@192.168.10.246:554/h264/ch1/main/av_stream",
+            "url_suffix": "/live/Ce7m5"
         }
     ],
-    "total_count":0,
-    "total_page":1
+    "total_count": 0,
+    "total_page": 1
 }
 ```
 
