--- a/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
+++ b/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
@@ -2,6 +2,44 @@
 
 + C++编程技巧
 
+## C++ std::thread 和 std::move 
+
+在 C++ 中，`std::thread` 是一个用于创建和管理线程的类，而 `std::move` 是一个用于移动语义的函数。这两者通常可以结合使用来传递线程的所有权。
+
+在使用 `std::thread` 时，通常需要注意线程对象的所有权问题。当你想要将一个线程对象所有权从一个变量转移给另一个变量时，你可以使用 `std::move` 来实现移动语义，而不是复制线程对象。
+
+以下是一个简单的示例，演示了如何使用 `std::move` 来传递 `std::thread` 对象的所有权：
+
+```cpp
+#include <iostream>
+#include <thread>
+
+void threadFunction() {
+    std::cout << "Inside thread function\n";
+}
+
+int main() {
+    // 创建一个线程
+    std::thread t1(threadFunction);
+
+    // 将线程对象的所有权移动给新的变量 t2
+    std::thread t2 = std::move(t1);
+
+    // t1 不再拥有线程，因此在这里无法join
+    // 如果尝试 join t1，则会导致程序崩溃或未定义行为
+    // t1.join(); 
+
+    // t2 拥有线程，因此可以 join
+    t2.join();
+
+    return 0;
+}
+```
+
+在这个示例中，`t1` 在创建时拥有线程，然后通过 `std::move` 将其所有权转移到了 `t2`。现在 `t1` 不再拥有线程，因此不能调用 `join()` 方法。相反，`t2` 现在拥有线程，可以调用 `join()` 方法。
+
+使用 `std::move` 可以有效地避免资源的复制，而是直接转移资源的所有权，从而提高了性能并避免不必要的资源浪费。
+
 ## C++ 表示一个函数不应该出现异常
 
 在C++中，表示一个函数不应该出现异常通常可以通过以下方式来实现：
