--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -120,9 +120,9 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name":"安全帽2",
+    "name":"入口2",
     "start":1,
-    "source":2,
+    "source":12,
     "schedulerType":"Daemon",
     "models":{
         "id":3,
@@ -147,6 +147,19 @@ curl -X GET http://127.0.0.1:8000/api/setting/task/list
 # 相机列表
 curl -X GET http://127.0.0.1:8000/api/setting/camera/list
 
+# 删除相机
+curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/delete' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 192.169.5.63:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "ids": [
+        6
+    ]
+}'
+
 # 创建相机
 curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
@@ -155,8 +168,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "施工主干道",
-    "url":"rtsp://admin:qwer1234@192.168.10.246:554/h264/ch1/main/av_stream"
+    "name": "入口",
+    "url":"rtsp://admin:1234qwer@192.168.188.202:554/Streaming/Channels/101?transportmode=unicast&profile=Profile_1"
 }'
 
 # 清除所有告警记录并删除文件
@@ -179,19 +192,31 @@ curl -X GET http://127.0.0.1:8000/api/setting/algorithm/list
 # 管理平台列表
 curl -X GET http://127.0.0.1:8000/api/device/listCloudPlatform
 
+## 删除管理平台
+curl --location --request POST 'http://127.0.0.1:8000/api/device/deleteCloudPlatform' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "id":3
+}'
+
 # 创建管理平台
 curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatform' \
 --header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
 --header 'Content-Type: application/json' \
 --header 'Accept: */*' \
---header 'Host: 192.169.5.61:8000' \
+--header 'Host: 192.169.5.78:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "test112",
+    "name": "常州建安测试",
     "type": "event_push",
-    "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
-    "appKeyId": "afa",
-    "appKeySecret": "1111"
+    "protocol":"changzhou_jianan",
+    "address": "https://wisdomsite.ticdata.cn/zhgd-cus/openApi/token&https://wisdomsite.ticdata.cn/smart-mon/openApi/addAiData",
+    "appKeyId": "qian001",
+    "appKeySecret": "12345678"
 }'
 
 # 查看序列号
