--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -290,3 +290,109 @@
     "total_page": 1
 }
 ```
+
+## gh-rk-1013
+
++ frp
+  + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1013:22,proxyport=5002' root@47.100.31.121
+
++ 任务列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": "R1kM0",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
+            },
+            "name": "入口1",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 15,
+            "start": 1
+        },
+        {
+            "id": "k6yhb",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 4,
+                "name": "反光衣检测",
+                "start": ""
+            },
+            "name": "入口2",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 16,
+            "start": 1
+        }
+    ],
+    "total_count": 2,
+    "total_page": 1
+}
+```
+
++ 相机列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": 15,
+            "name": "东入口",
+            "updatedtime": "2024-4-2 18:19:26",
+            "url": "rtsp://admin:1234qwer@192.168.188.204:554/Streaming/Channels/101?transportmode=unicast&profile=Profile_1",
+            "url_suffix": "/live/5Y0HQ"
+        },
+        {
+            "id": 16,
+            "name": "入口",
+            "updatedtime": "2024-4-2 18:20:36",
+            "url": "rtsp://admin:1234qwer@192.168.188.202:554/Streaming/Channels/101?transportmode=unicast&profile=Profile_1",
+            "url_suffix": "/live/Z6c31"
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 管理平台列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "address": "http://192.169.4.16:28009/api/play",
+            "appKeyId": "adf",
+            "appKeySecret": "adf",
+            "id": 4,
+            "name": "aa",
+            "type": "video_play"
+        },
+        {
+            "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
+            "appKeyId": "dfs",
+            "appKeySecret": "ad",
+            "id": 1,
+            "name": "test",
+            "type": "event_push"
+        }
+    ],
+    "msg": "success",
+    "total_count": 2,
+    "total_page": 1
+}
+```
