--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -120,12 +120,12 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name":"入口2",
+    "name":"明烟明火抓拍",
     "start":1,
     "source":12,
     "schedulerType":"Daemon",
     "models":{
-        "id":3,
+        "id":1,
         "duration":" ",
         "start":" ",
         "end":" "
@@ -168,8 +168,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "入口",
-    "url":"rtsp://admin:1234qwer@192.168.188.202:554/Streaming/Channels/101?transportmode=unicast&profile=Profile_1"
+    "name": "明烟明火抓拍",
+    "url":"rtsp://admin:wyl1q2w3e@192.168.1.92"
 }'
 
 # 清除所有告警记录并删除文件
@@ -200,7 +200,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/device/deleteCloudPlat
 --header 'Host: 127.0.0.1:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "id":3
+    "id":2
 }'
 
 # 创建管理平台
