--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -396,3 +396,109 @@
     "total_page": 1
 }
 ```
+
+## gh-rk-1016
+
++ frp
+  + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1016:22,proxyport=5002' root@47.100.31.121
+
++ 任务列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": "H9t65",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
+            },
+            "name": "安全帽抓拍",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 11,
+            "start": 1
+        },
+        {
+            "id": "ZZk06",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 1,
+                "name": "烟火检测",
+                "start": ""
+            },
+            "name": "明烟明火抓拍",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 12,
+            "start": 1
+        }
+    ],
+    "total_count": 2,
+    "total_page": 1
+}
+```
+
++ 相机列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": 11,
+            "name": "安全帽抓拍",
+            "updatedtime": "2024-4-3 11:9:50",
+            "url": "rtsp://admin:wyl1q2w3e@192.168.1.93",
+            "url_suffix": "/live/OI1U5"
+        },
+        {
+            "id": 12,
+            "name": "明烟明火抓拍",
+            "updatedtime": "2024-4-3 11:10:0",
+            "url": "rtsp://admin:wyl1q2w3e@192.168.1.92",
+            "url_suffix": "/live/H8Rpk"
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 管理平台列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "address": "http://192.169.4.16:28009/api/play",
+            "appKeyId": "adf",
+            "appKeySecret": "adf",
+            "id": 4,
+            "name": "aa",
+            "type": "video_play"
+        },
+        {
+            "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
+            "appKeyId": "dfs",
+            "appKeySecret": "ad",
+            "id": 1,
+            "name": "test",
+            "type": "event_push"
+        }
+    ],
+    "msg": "success",
+    "total_count": 2,
+    "total_page": 1
+}
+```
