增加CUDA笔记模块

--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -228,6 +228,31 @@ curl -X GET http://127.0.0.1:8000/api/device/listSoundPlatform
 # 获取音频文件列表
 curl -X GET http://127.0.0.1:8000/api/setting/task/listSongs
 
+# 获取系统配置(图片数量)
+curl --location --request GET 'http://127.0.0.1:8000/api/device/system_config' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive'
+
+# 设置保存图片数量
+curl --location --request PUT 'http://127.0.0.1:8000/api/device/system_config' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "autoDeleteEventThreshold": 999,
+    "autoDeleteEventTimeThreshold": 7,
+    "enableAutoDelete": true,
+    "enableGddRecycleData": false,
+    "enableNotifyEvent": false,
+    "eventSubscribers": null,
+    "reportEventDrawImageWithROI": true,
+    "modifyFlag": true
+}'
+
 ```
 
 ## 妙音平台
