--- a/Personal/资金.md
+++ b/Personal/资金.md
@@ -117,3 +117,20 @@
   + 招商: 1660.9
   + 农业: 298.42
   + 信用卡: -92.95
+
+## 2024.04.12
+
++ 总存款: 3.6w + 5k + 2k = 4.3w
++ 当前余额
+  + 招商: 1886.88
+  + 农业: 42.93
+  + 信用卡: -334.58
+  + 微信: 800.07
+  + 总计: 2395.3
+
++ 上一次统计到目前为止，大额输出是: 苏州游玩 1000+ 和 三个月的房租 1506
+
++ 截至下一次收入之前的规划
+  + 存钱: 8000
+  + 日常开销: 1000+
+  + 剩余: 2395.3 - 1000 + 400 = 1800
