增加网络相关笔记

--- a/C++/C++_03_常用函数/C++_03_2_常用函数.md
+++ b/C++/C++_03_常用函数/C++_03_2_常用函数.md
@@ -2,6 +2,42 @@
 
 + C++函数常用函数
 
+## C++ std::isnan() 函数 详解
+
+`std::isnan()` 是 C++ 标准库中的一个函数，用于检查一个浮点数是否为 NaN（Not a Number）。
+
+NaN 是 IEEE 浮点数表示中的一个特殊值，它通常表示一个未定义或不可表示的结果，比如 0/0 的结果或者负数的平方根。NaN 的特点是无法与任何其他浮点数进行比较，包括它自己，因此检查一个值是否为 NaN 是很有用的。
+
+`std::isnan()` 函数的声明位于 `<cmath>` 头文件中，并且提供了重载版本以支持不同的浮点类型。常见的版本有：
+
+```cpp
+bool isnan(float arg) noexcept;       // 检查 float 是否为 NaN
+bool isnan(double arg) noexcept;      // 检查 double 是否为 NaN
+bool isnan(long double arg) noexcept; // 检查 long double 是否为 NaN
+```
+
+函数接受一个浮点数作为参数，并返回一个布尔值，表示参数是否为 NaN。如果参数是 NaN，则返回 `true`，否则返回 `false`。
+
+使用示例：
+
+```cpp
+#include <iostream>
+#include <cmath>
+
+int main() {
+    double nanValue = std::nan("");
+    double normalValue = 42.0;
+
+    std::cout << std::boolalpha; // 以布尔形式输出
+    std::cout << "Is nanValue NaN? " << std::isnan(nanValue) << std::endl;
+    std::cout << "Is normalValue NaN? " << std::isnan(normalValue) << std::endl;
+
+    return 0;
+}
+```
+
+在这个示例中，`std::nan("")` 创建了一个 NaN 值的双精度浮点数。然后通过 `std::isnan()` 函数检查这个值，以及一个普通的值是否为 NaN，并输出结果。
+
 ## std::ostringstream 详解
 
 `std::ostringstream` 是 C++ 标准库中的一个类，位于 `<sstream>` 头文件中，用于在内存中创建和操作字符串。它是 `std::ostream` 的子类，因此可以使用类似于输出流的方式将数据写入其中，但数据将被存储为字符串。
