--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -291,6 +291,117 @@
 }
 ```
 
+## gh-rk-1012
+
++ frp
+  + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1012:22,proxyport=5002' root@47.100.31.121
+
++ 任务列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": "56SHG",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
+            },
+            "name": "安全帽",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 13,
+            "start": 1
+        }
+    ],
+    "total_count": 1,
+    "total_page": 1
+}
+```
+
++ 相机列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": 12,
+            "name": "施工现场",
+            "updatedtime": "2024-1-17 12:26:35",
+            "url": "rtsp://admin:Admin12345@192.168.2.6:554/h264/ch1/main/av_stream",
+            "url_suffix": "/live/B0Be0"
+        },
+        {
+            "id": 13,
+            "name": "主干道",
+            "updatedtime": "2024-1-17 13:32:33",
+            "url": "rtsp://admin:Admin12345@192.168.2.2:555/h264/ch1/main/av_stream",
+            "url_suffix": "/live/ZbrZW"
+        },
+        {
+            "id": 14,
+            "name": "现场道路",
+            "updatedtime": "2024-1-17 12:34:24",
+            "url": "rtsp://admin:Admin12345@192.168.2.11:554/h264/ch1/main/av_stream",
+            "url_suffix": "/live/61nKH"
+        },
+        {
+            "id": 15,
+            "name": "大门外",
+            "updatedtime": "2024-1-17 12:46:6",
+            "url": "rtsp://admin:Admin12345@192.168.2.5:554/h264/ch1/main/av_stream",
+            "url_suffix": "/live/1t37b"
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 管理平台列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
+            "appKeyId": "afa",
+            "appKeySecret": "11122",
+            "id": 5,
+            "name": "test123",
+            "type": "event_push"
+        },
+        {
+            "address": "http://192.169.4.16:28009/api/play",
+            "appKeyId": "adf",
+            "appKeySecret": "adf",
+            "id": 4,
+            "name": "aa",
+            "type": "video_play"
+        },
+        {
+            "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
+            "appKeyId": "dfs",
+            "appKeySecret": "ad",
+            "id": 1,
+            "name": "test",
+            "type": "event_push"
+        }
+    ],
+    "msg": "success",
+    "total_count": 3,
+    "total_page": 1
+}
+```
+
 ## gh-rk-1013
 
 + frp
