--- a/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
+++ b/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
@@ -2,6 +2,45 @@
 
 + C++编程技巧
 
+## C++ std::vector 指定被赋值容器的范围进行赋值
+
+如果你想要在C++中使用`std::vector`，并且想要将一个vector的内容赋值给另一个vector的特定范围，你可以使用`std::copy`算法或者`std::vector`的迭代器来实现。
+
+下面是使用`std::copy`算法的示例代码：
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <algorithm>
+
+int main() {
+    std::vector<int> source = {1, 2, 3, 4, 5};
+    std::vector<int> destination(7); // 创建一个有7个元素的目标vector
+
+    // 将source的第2到第4个元素（不包括第4个元素）赋值给destination的第3个位置开始
+    std::copy(source.begin() + 1, source.begin() + 4, destination.begin() + 2);
+
+    // 打印destination vector的内容
+    std::cout << "destination contains:";
+    for (int elem : destination) {
+        std::cout << ' ' << elem;
+    }
+    std::cout << '\n';
+
+    return 0;
+}
+```
+
+这段代码会输出：
+
+```
+destination contains: 0 0 2 3 4 0 0
+```
+
+在这个例子中，`std::copy`算法从源vector的第2到第4个元素（不包括第4个元素）复制到目标vector的第3个位置开始。
+
+另一种方法是使用`std::vector`的迭代器来实现。你可以使用`std::vector`的`assign`函数，结合迭代器来指定赋值的范围。
+
 ## C++ std::thread 和 std::move 
 
 在 C++ 中，`std::thread` 是一个用于创建和管理线程的类，而 `std::move` 是一个用于移动语义的函数。这两者通常可以结合使用来传递线程的所有权。
