--- a/Grandhonor/construction-vehicle_工地车辆检测/1_2_任务配置.md
+++ b/Grandhonor/construction-vehicle_工地车辆检测/1_2_任务配置.md
@@ -40,3 +40,21 @@
 # 单一任务 调试模式 输入rtsp流地址
 ./vca.exe --service-mode 0  --cmd 2 --id 1 --detector-conf-inline 1 --detector-conf @--detector-type@2@--detector-models@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_4CLASSES.conf@/xxx@/yyy@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_LP_4CLASSES.conf@/data/static/models/CONSTRUCTION_VEHICLE/LPOCR_1L_LPRNET_COMPLEX.conf@--detector-fps@8@ --input-video-name rtsp://admin:abcd1234@192.169.8.153 --input-video-retry-interval 5 --output-type 0
 ```
+
+## sqlite3数据库配置参数
+
++ 模型JSON配置参数
+```json
+{"models":[{"model":"CONSTRUCTION_VEHICLE/DETECT_4CLASSES.conf","threshold":0.3},{"model":"/xxx","threshold":0.3},{"model":"/xxx","threshold":0.3},{"model":"CONSTRUCTION_VEHICLE/DETECT_LP_4CLASSES.conf","threshold":0.3},{"model":"CONSTRUCTION_VEHICLE/LPOCR_1L_LPRNET_COMPLEX.conf","threshold":0.3}],"tracker":1,"type":2}
+```
+
++ SQL语句
+```sql
+insert into algorithm (id, name, product, vendor, detector_path, model_conf, time) values (3, "工地车辆检测", "loya", "loya", "/data/static/models/CONSTRUCTION_VEHICLE/detector.json", "{'models':[{'model':'CONSTRUCTION_VEHICLE/DETECT_4CLASSES.conf','threshold':0.3},{'model':'/xxx','threshold':0.3},{'model':'/xxx','threshold':0.3},{'model':'CONSTRUCTION_VEHICLE/DETECT_LP_4CLASSES.conf','threshold':0.3},{'model':'CONSTRUCTION_VEHICLE/LPOCR_1L_LPRNET_COMPLEX.conf','threshold':0.3}],'tracker':1,'type':2}", "2023-7-26 14:18:33");
+```
+
+## 本地视频转rtsp流
+
+```bash
+ffmpeg    -re  -i  /home/user/zjy-190/Videos/vehcile/zhongshanlu.mp4    -vcodec h264 -acodec aac -strict -2   -f rtsp -rtsp_transport tcp  rtsp://127.0.0.1/live/test1
+```
