--- a/Grandhonor/construction-vehicle_工地车辆检测/1_2_任务配置.md
+++ b/Grandhonor/construction-vehicle_工地车辆检测/1_2_任务配置.md
@@ -5,40 +5,13 @@
 ## vca车辆检测任务启动参数
 
 ```bash
-20240408103030.092847 p343 vca.exe(vca.exe): REQ: {
-20240408103030.092847 p343 vca.exe(vca.exe): --cmd
-20240408103030.092847 p343 vca.exe(vca.exe): 2
-20240408103030.092847 p343 vca.exe(vca.exe): --detector-conf
-20240408103030.092847 p343 vca.exe(vca.exe): @--detector-type@2@--detector-models@/data/dagger/static/models/VEHICLE/DETECT_GD.conf@/xxx@/yyy@/data/dagger/static/models/VEHICLE/DETECT_LP.conf@/data/dagger/static/models/VEHICLE/LPOCR.conf@@--detector-fps@8@
-20240408103030.092847 p343 vca.exe(vca.exe): --detector-conf-inline
-20240408103030.092847 p343 vca.exe(vca.exe): 1
-20240408103030.092847 p343 vca.exe(vca.exe): --id
-20240408103030.092847 p343 vca.exe(vca.exe): 1
-20240408103030.092847 p343 vca.exe(vca.exe): --input-trace
-20240408103030.092847 p343 vca.exe(vca.exe): 1
-20240408103030.092847 p343 vca.exe(vca.exe): --input-video-name
-20240408103030.092847 p343 vca.exe(vca.exe): /data/dagger/mp4/1-1712458335010.mp4
-20240408103030.092847 p343 vca.exe(vca.exe): --input-video-retry-interval
-20240408103030.092847 p343 vca.exe(vca.exe): 5
-20240408103030.092847 p343 vca.exe(vca.exe): --output-jpeg-preview
-20240408103030.092847 p343 vca.exe(vca.exe): 960x540
-20240408103030.092847 p343 vca.exe(vca.exe): --output-redis-db
-20240408103030.092847 p343 vca.exe(vca.exe): 1
-20240408103030.092847 p343 vca.exe(vca.exe): --output-redis-port
-20240408103030.092847 p343 vca.exe(vca.exe): 16379
-20240408103030.092847 p343 vca.exe(vca.exe): --output-redis-queue
-20240408103030.092847 p343 vca.exe(vca.exe): q1
-20240408103030.092847 p343 vca.exe(vca.exe): --output-redis-queue-max
-20240408103030.092847 p343 vca.exe(vca.exe): 2
-20240408103030.092847 p343 vca.exe(vca.exe): --output-type
-20240408103030.092847 p343 vca.exe(vca.exe): 3
-20240408103030.092847 p343 vca.exe(vca.exe): }
-
 # 客户端模式 输入mp4文件地址
 ./vca.exe --cmd 2 --id 1 --detector-conf-inline 1 --detector-conf @--detector-type@2@--detector-models@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_4CLASSES.conf@/xxx@/yyy@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_LP_4CLASSES.conf@/data/static/models/CONSTRUCTION_VEHICLE/LPOCR_1L_LPRNET_COMPLEX.conf@--detector-fps@8@ --input-video-name /tmp/1-1712458335010.mp4 --input-video-retry-interval 5 --output-type 1 
 
 # 单一任务 调试模式 输入rtsp流地址
 ./vca.exe --service-mode 0  --cmd 2 --id 1 --detector-conf-inline 1 --detector-conf @--detector-type@2@--detector-models@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_4CLASSES.conf@/xxx@/yyy@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_LP_4CLASSES.conf@/data/static/models/CONSTRUCTION_VEHICLE/LPOCR_1L_LPRNET_COMPLEX.conf@--detector-fps@8@ --input-video-name rtsp://admin:abcd1234@192.169.8.153 --input-video-retry-interval 5 --output-type 0
+
+./vca.exe --service-mode 0  --cmd 2 --id 1 --detector-conf-inline 1 --detector-conf @--detector-type@2@--detector-models@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_4CLASSES.conf@/xxx@/yyy@/data/static/models/CONSTRUCTION_VEHICLE/DETECT_LP_4CLASSES.conf@/data/static/models/CONSTRUCTION_VEHICLE/LPOCR_1L_LPRNET_COMPLEX.conf@--detector-fps@8@ --input-video-name /tmp/1-1709940888706.mp4 --input-video-retry-interval 5 --output-type 0
 ```
 
 ## sqlite3数据库配置参数
