--- a/Grandhonor/construction-vehicle_工地车辆检测/1_3_业务逻辑.md
+++ b/Grandhonor/construction-vehicle_工地车辆检测/1_3_业务逻辑.md
@@ -1,6 +1,8 @@
 ## 简介
 
 + 工地车辆检测的业务逻辑部分实现
++ 触发告警的标签:
+  + "20015": "卡车"
 
 ## 底层流媒体服务输出的结构化数据
 
@@ -96,3 +98,22 @@
 ## 告警推送地址
 
 + http://47.122.2.41:12000/wisdomSiteSnap/cameraSubscribe/algorithmResult2H
+
+## 添加云平台地址
+
+```bash
+curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatform' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "name": "南京匠造测试",
+    "type": "event_push",
+    "protocol":"nanjing_jiangzao",
+    "address": "http://47.122.2.41:12000/wisdomSiteSnap/cameraSubscribe/algorithmResult2H",
+    "appKeyId": "qian001",
+    "appKeySecret": "12345678"
+}'
+```
