--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -316,6 +316,12 @@ ssh-keygen -f "/home/user/.ssh/known_hosts" -R "47.100.31.121"
 # update environment
 source /data/static/bash/source.sh
 
+# 相机列表
+curl -X GET http://127.0.0.1:8000/api/setting/camera/list
+
+# gh-rk-1023
+/data/edge/VideoProcess/3party/bin/ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/8r9am -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
+
 # gh-rk-1012
 /data/edge/VideoProcess/3party/bin/ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/ZbrZW -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
 
