--- a/Grandhonor/construction-vehicle_工地车辆检测/1_3_业务逻辑.md
+++ b/Grandhonor/construction-vehicle_工地车辆检测/1_3_业务逻辑.md
@@ -95,11 +95,29 @@
 
 + http://47.122.2.41:12000/wisdomSiteSnap/cameraSubscribe/algorithmHeart2H
 
++ 添加心跳推送
+```bash
+curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatform' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "name": "南京匠造心跳测试",
+    "type": "heart_beat_push",
+    "protocol":"nanjing_jiangzao",
+    "address": "http://47.122.2.41:12000/wisdomSiteSnap/cameraSubscribe/algorithmHeart2H",
+    "appKeyId": "qian001",
+    "appKeySecret": "12345678"
+}'
+```
+
 ## 告警推送地址
 
 + http://47.122.2.41:12000/wisdomSiteSnap/cameraSubscribe/algorithmResult2H
 
-## 添加云平台地址
++ 添加云平台地址
 
 ```bash
 curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatform' \
