--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -320,7 +320,7 @@ source /data/static/bash/source.sh
 curl -X GET http://127.0.0.1:8000/api/setting/camera/list
 
 # gh-rk-1023
-/data/edge/VideoProcess/3party/bin/ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/8r9am -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
+/data/edge/VideoProcess/3party/bin/ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/ki2Ep -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
 
 # gh-rk-1012
 /data/edge/VideoProcess/3party/bin/ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/ZbrZW -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
@@ -332,6 +332,10 @@ curl -X GET http://127.0.0.1:8000/api/setting/camera/list
 
 + 视频拷贝
 ```bash
+# gh-rk-1023
+scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1023:22,proxyport=5002' root@47.100.31.121:/userdata/zzz-*.mp4 /home/user/zjy-190/Videos/gh-rk-1023/
+ffplay /home/user/zjy-190/Videos/gh-rk-1023/zzz.mp4
+
 # gh-rk-1012
 ls /home/user/zjy-190/Videos/gh-rk-1012/
 mv /home/user/zjy-190/Videos/gh-rk-1012/zzz.mp4 /home/user/zjy-190/Videos/gh-rk-1012/zzz_20.mp4
