--- a/Grandhonor/construction-vehicle_工地车辆检测/1_1_项目简介.md
+++ b/Grandhonor/construction-vehicle_工地车辆检测/1_1_项目简介.md
@@ -30,3 +30,11 @@
   + VEHICLE/LPOCR_1L_LPRNET_COMPLEX.conf
   + models/LPOCR_LPRNET_20201126-FP32-B1-TRT8.2.5.1-NVIDIA GeForce RTX 2080-x86_64
   + /mnt/remote/190-mnt/zhangpengcheng/Release/Model/Compatible/VEHICLE/LPOCR_LPRNET_20201126.onnx
+
+## 测试视频
+
++ 公司车冲收集的视频
+  + rtsp://192.169.4.56:8091/JianZhuGongDi_CheLiangChongXi_01.mp4
+
++ 南京-匠造给的视频
+  + rtsp://192.169.4.56:8091/JianZhuGongDi_NanJing_JiangZao.mp4
