--- a/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
+++ b/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
@@ -2,6 +2,48 @@
 
 + C++编程技巧
 
+## C++ std::for_each() 函数中lambda捕获局部变量是以什么规则捕获的
+
+在 C++ 中，`std::for_each()` 函数通常与 lambda 表达式一起使用。当你在 lambda 表达式中捕获局部变量时，捕获方式是由捕获列表来确定的。捕获列表控制了 lambda 表达式访问外部变量的方式。
+
+捕获列表有两种方式：按值捕获和按引用捕获。
+
+1. **按值捕获：** 按值捕获会在 lambda 表达式内部创建外部变量的副本，这样 lambda 表达式内部的代码就可以使用该副本。即使外部变量的值发生变化，lambda 表达式内部也不会受到影响。
+
+```cpp
+int main() {
+    int x = 42;
+    std::vector<int> vec = {1, 2, 3, 4, 5};
+    
+    // Lambda 按值捕获 x
+    std::for_each(vec.begin(), vec.end(), [x](int n) {
+        std::cout << n + x << std::endl;
+    });
+    
+    return 0;
+}
+```
+
+2. **按引用捕获：** 按引用捕获不会创建变量的副本，而是直接引用外部变量。这意味着 lambda 表达式内部的代码可以访问并修改外部变量的值。
+
+```cpp
+int main() {
+    int x = 42;
+    std::vector<int> vec = {1, 2, 3, 4, 5};
+    
+    // Lambda 按引用捕获 x
+    std::for_each(vec.begin(), vec.end(), [&x](int n) {
+        x += n;
+    });
+    
+    std::cout << "x: " << x << std::endl; // 输出：x: 57
+    
+    return 0;
+}
+```
+
+在使用 `std::for_each()` 函数时，你可以根据需要选择按值捕获还是按引用捕获，以确保 lambda 表达式的行为符合预期。
+
 ## C++ std::vector 指定被赋值容器的范围进行赋值
 
 如果你想要在C++中使用`std::vector`，并且想要将一个vector的内容赋值给另一个vector的特定范围，你可以使用`std::copy`算法或者`std::vector`的迭代器来实现。
