--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -148,6 +148,59 @@
 }
 ```
 
+## gh-rk-1004
+
++ frp
+  + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1004:22,proxyport=5002' root@47.100.31.121
+
++ 任务列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": "BPw80",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
+            },
+            "name": "安全帽检测",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 11,
+            "start": 1
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 相机列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": 11,
+            "name": "摄像头",
+            "updatedtime": "2024-4-25 16:57:38",
+            "url": "rtsp://admin:cww058629@192.168.2.71",
+            "url_suffix": "/live/2gS61"
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
 ## gh-rk-1008
 
 + frp
