--- a/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
+++ b/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
@@ -2,6 +2,164 @@
 
 + C++编程技巧
 
+## C++ std::this_thread::yield()函数后面的语句还会执行吗
+
+`std::this_thread::yield()` 函数是一个线程库提供的函数，用于提示调度器让出当前线程的执行权，以便其他线程有机会执行。调用 `std::this_thread::yield()` 后，当前线程会主动让出 CPU 的执行时间片，但它的执行权并不会立即转移到其他线程上。相反，操作系统调度器会在合适的时机（通常是在同一线程队列中的其他线程都执行完毕后）再次调度当前线程。因此，`std::this_thread::yield()` 后面的语句仍然会执行，只是在稍后的时间点。
+
+考虑以下示例：
+
+```cpp
+#include <iostream>
+#include <thread>
+
+void foo() {
+    std::cout << "Before yield" << std::endl;
+    std::this_thread::yield();
+    std::cout << "After yield" << std::endl;
+}
+
+int main() {
+    std::thread t(foo);
+    t.join();
+    return 0;
+}
+```
+
+在这个示例中，`foo()` 函数中的 `std::cout << "Before yield" << std::endl;` 和 `std::cout << "After yield" << std::endl;` 语句都会执行，即使在 `std::this_thread::yield();` 被调用后。`std::this_thread::yield()` 只是提示调度器让出 CPU 的执行时间片，而不是中断线程的执行。
+
+## C++ 使用原子操作通知指定线程退出 示例 详解
+
+使用原子操作通知指定线程退出的示例需要借助原子布尔标志（`std::atomic<bool>`）来控制线程的执行状态。下面是一个详细的示例：
+
+```cpp
+#include <iostream>
+#include <thread>
+#include <atomic>
+
+std::atomic<bool> shouldExit(false);
+
+void worker(int id) {
+    while (!shouldExit.load(std::memory_order_acquire)) {
+        std::cout << "Worker " << id << " is working..." << std::endl;
+        // Simulate some work
+        std::this_thread::sleep_for(std::chrono::seconds(1));
+    }
+    std::cout << "Worker " << id << " exiting." << std::endl;
+}
+
+int main() {
+    std::thread t1(worker, 1);
+    std::thread t2(worker, 2);
+    
+    // Simulate some work
+    std::this_thread::sleep_for(std::chrono::seconds(3));
+    
+    // Set shouldExit to true
+    shouldExit.store(true, std::memory_order_release);
+    
+    t1.join();
+    t2.join();
+    
+    return 0;
+}
+```
+
+在这个示例中，`shouldExit` 是一个原子布尔变量，用来控制线程是否应该退出。在 `worker` 函数中，线程会在循环中检查 `shouldExit` 变量的值，如果值为 `false`，则继续执行工作，否则退出循环并退出线程。
+
+在 `main` 函数中，首先创建了两个工作线程 `t1` 和 `t2`，然后模拟了一些工作。随后，`shouldExit` 被设置为 `true`，通知工作线程退出。最后，`main` 函数等待两个工作线程退出。
+
+通过使用原子操作，我们可以避免使用额外的同步机制（如互斥锁、条件变量等），从而更加高效地控制线程的退出。
+
+## C++ 使用条件变量通知指定线程退出 示例 详解
+
+使用条件变量（`std::condition_variable`）通知指定线程退出的示例可以通过以下步骤实现：
+
+1. 创建一个标志变量来指示线程是否应该退出。
+2. 使用条件变量来等待通知。
+3. 当需要退出线程时，设置标志变量，并通知等待线程退出。
+4. 等待线程收到通知后退出。
+
+让我们通过一个简单的示例来详细说明这个过程：
+
+```cpp
+#include <iostream>
+#include <thread>
+#include <mutex>
+#include <condition_variable>
+
+std::mutex mtx;
+std::condition_variable cv;
+bool shouldExit = false;
+
+void worker(int id) {
+    std::unique_lock<std::mutex> lock(mtx);
+    while (!shouldExit) {
+        // Wait until notified or the timeout expires
+        cv.wait(lock);
+        std::cout << "Worker " << id << " is working..." << std::endl;
+        // Simulate some work
+        std::this_thread::sleep_for(std::chrono::seconds(1));
+    }
+    std::cout << "Worker " << id << " exiting." << std::endl;
+}
+
+int main() {
+    std::thread t1(worker, 1);
+    std::thread t2(worker, 2);
+    
+    // Simulate some work
+    std::this_thread::sleep_for(std::chrono::seconds(3));
+    
+    {
+        // Set shouldExit to true and notify the worker threads to exit
+        std::lock_guard<std::mutex> lock(mtx);
+        shouldExit = true;
+        cv.notify_all();
+    }
+    
+    t1.join();
+    t2.join();
+    
+    return 0;
+}
+```
+
+在这个示例中，有两个工作线程（`t1` 和 `t2`），它们会等待条件变量 `cv` 的通知。`shouldExit` 是一个标志变量，用于指示线程是否应该退出。
+
+在 `main()` 函数中，首先创建了两个工作线程，然后模拟了一些工作。随后，`shouldExit` 被设置为 `true`，并且通过 `cv.notify_all()` 通知所有等待的线程退出。最后，`main()` 函数等待两个工作线程退出。
+
+这样，通过条件变量和标志变量，我们可以控制线程的退出。当需要退出线程时，只需设置标志变量并通知等待的线程即可。
+
+## C++ std::thread 线程间通信的几种方式 详解
+
+在线程间通信时，C++ 的 `std::thread` 提供了几种常用的方式：
+
+1. **共享内存（Shared Memory）**：
+   - 这是最简单和直接的方法之一，多个线程可以访问同一块内存区域。但要小心并发访问的问题，需要使用诸如互斥锁（mutex）或原子操作等机制来确保线程安全。
+
+2. **互斥锁（Mutex）**：
+   - 使用 `std::mutex` 来确保一次只有一个线程可以访问共享资源。线程在访问共享资源之前先锁定互斥锁，访问完毕后再解锁。这确保了对共享资源的排他性访问，防止数据竞争。
+
+3. **条件变量（Condition Variable）**：
+   - `std::condition_variable` 可以在多线程间进行通信，一般与互斥锁一起使用。一个线程等待条件变量的某个条件为真，而另一个线程在适当的时候发出通知，告诉等待线程条件已经满足。
+
+4. **原子操作（Atomic Operations）**：
+   - `std::atomic` 类型提供了一种线程安全的方式来访问共享数据，它们确保在没有互斥锁的情况下执行单个操作时的线程安全性。原子操作通常用于简单的数据类型（如整数、布尔值等）。
+
+5. **消息队列（Message Queue）**：
+   - 使用 `std::queue` 或其他自定义队列结构，不同线程可以通过向队列发送消息来进行通信。这种方式一般需要配合互斥锁或原子操作来确保队列操作的线程安全。
+
+6. **管道（Pipe）**：
+   - 如果是在不同进程之间进行通信，可以使用管道。在C++中，可以使用 `popen()` 或者在POSIX环境下使用 `pipe()` 函数。
+
+7. **信号量（Semaphore）**：
+   - `std::semaphore` 或者第三方库提供的信号量机制可以用于控制同时访问某个共享资源的线程数量。
+
+8. **屏障（Barrier）**：
+   - 屏障允许多个线程在某一点上相互等待，直到所有线程都到达后才继续执行。C++中可以使用 `std::barrier`（C++20 引入）或者其他第三方库提供的屏障机制。
+
+选择哪种通信方式取决于具体情况，包括线程之间的关系、共享资源的类型、性能需求等。
+
 ## C++ std::for_each() 函数中lambda捕获局部变量是以什么规则捕获的
 
 在 C++ 中，`std::for_each()` 函数通常与 lambda 表达式一起使用。当你在 lambda 表达式中捕获局部变量时，捕获方式是由捕获列表来确定的。捕获列表控制了 lambda 表达式访问外部变量的方式。
