--- a/Grandhonor/construction-vehicle_工地车辆检测/1_1_项目简介.md
+++ b/Grandhonor/construction-vehicle_工地车辆检测/1_1_项目简介.md
@@ -38,3 +38,11 @@
 
 + 南京-匠造给的视频
   + rtsp://192.169.4.56:8091/JianZhuGongDi_NanJing_JiangZao.mp4
+
+## 部署记录
+
++ gh-rk-1003
+  + 6f73c295-bbd0-1260-b95e-cd7f5c11c524
+
++ gh-rk-1026
+  + 76f368f3-d222-c197-37d4-af9bc7f4392c
