--- a/Grandhonor/construction-vehicle_工地车辆检测/1_2_任务配置.md
+++ b/Grandhonor/construction-vehicle_工地车辆检测/1_2_任务配置.md
@@ -2,6 +2,15 @@
 
 + 底层模型部署，任务执行相关笔记
 
+## mnc 常用命令
+
+```bash
+
+# 清除所有告警记录并删除文件
+curl -X GET http://127.0.0.1:8000/api/setting/warning_record/clear
+
+```
+
 ## vca车辆检测任务启动参数
 
 ```bash
